Fri Apr 19 11:36:53 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (stack_protector): control use of -fstack-protector.

	* configure.in (debugflags): let -fstack-protector precede and disable
	  debugflags, because they can't work together on SmartOS.  [Bug #8268]

Fri Apr 19 07:43:52 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* test/openssl/test_cipher.rb: Correct a typo
	  by jgls <joerg@joergleis.com>
	  https://github.com/ruby/ruby/pull/291 fix GH-291

Thu Apr 18 16:58:51 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_method.c (rb_mod_public_method): fix visibility on anonymous
	  module. set visibility of singleton method, not method in base
	  class.  [ruby-core:54404] [Bug #8284]

Thu Apr 18 16:20:51 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (glob_helper): should skip dot directories only for recursion,
	  but should not if matching to the given pattern.  [ruby-core:54387]
	  [Bug #8283]

Thu Apr 18 16:20:21 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* pack.c (pack_unpack): increase buffer size to fix buffer overflow,
	  and fix garbage just after unpacking without missing paddings.
	  [Bug #8286]

Thu Apr 18 13:35:54 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* pack.c (pack_unpack): output characters even if the input doesn't
	  have paddings. [Bug #8286]

Thu Apr 18 08:20:48 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* common.mk (clean-ext): remove timestamps.

Wed Apr 17 22:07:50 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/rubysocket.h (SOCKLEN_MAX): Expression simplified.

Wed Apr 17 20:09:19 2013  Aman Gupta  <ruby@tmm1.net>

	* compile.c (iseq_add_mark_object): Use new rb_iseq_add_mark_object().

	* insns.def (setinlinecache): Ditto.

	* iseq.c (rb_iseq_add_mark_object): New function to allocate
	  iseq->mark_ary on demand. [Bug #8142]

	* iseq.h (rb_iseq_add_mark_object): Ditto.

	* iseq.c (prepare_iseq_build): Avoid allocating mark_ary until needed.

	* iseq.c (rb_iseq_build_for_ruby2cext): Ditto.
